--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Source+Code+Pro&display=swap');
+
 #content {
     max-width: 1600px;
     margin: 0 auto;
@@ -8,6 +10,7 @@ nav a {
     text-align: center;
     color: white;
     text-decoration: none;
+    padding: 35px;
 }
 
 #hero-msg h1, #hero-msg h4 {
@@ -30,6 +33,10 @@ body {
     background-color:#003459 ;
     padding: 0;
     margin: 0;
+    font-size: 22px;
+    padding: 0;
+    margin: 0;
+    
 }
 
 header {
@@ -42,7 +49,12 @@ nav a:hover {
 .book, .join {
     background-color: grey;
     text-decoration: none;
-    color: gold
+    color: gold;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
+
 }
 
 .book:hover, .join:hover {
@@ -55,15 +67,23 @@ nav a:hover {
 }
 
 .msg {
-    background-color: white
+    background-color: white;
+    line-height: 1.5em;
+    padding: 35px;
 }
 
 footer {
     background-color: darkgrey;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 
 .home-title {
-    color: black
+    color: black;
+    font-family: 'Bebas Neue', cursive;
+/*font-family: 'Source Code Pro', monospace;*/
+    font-size: 2em;
+    margin-top: 10px;
 }
 
 h4 {
@@ -76,6 +96,8 @@ h4 {
 
 .msg p {
     color: black;
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 
 footer h3 {
@@ -100,3 +122,31 @@ footer a:hover {
     width: 100%;
 }
 
+h2 {
+    margin: 0;
+
+}
+
+#logo_link {
+    padding-top: 5px;
+}
+
+.icon {
+    padding-top: 10px;
+}
+
+footer .social img {
+    padding-top: 15px;
+}
+
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
+
+.card-img {
+    border: 10px solid black;
+}
+
+main section img {
+    box-sizing: border-box;
+}
