--- a/PersonalWebsite/siteplan.css
+++ b/PersonalWebsite/siteplan.css
@@ -1,29 +1,29 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
-@import url('https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Source+Code+Pro&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
-  --accent2-color: white;
+  --primary-color: #4B4A67   ;
+  --secondary-color: #F4F1BB ;
+  --accent1-color: #1D1A05;
+  --accent2-color: #F4F1BB;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon SC";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: "Bebas Neue";
+  --paragraph-font: Source Code Pro, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
-  --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
-  --nav-hover-link-color: white;
-  --nav-hover-background-color: #396E94;
+  --headline-color-on-white: #4B4A67;  /* headlines on a white background */ 
+  --headline-color-on-color: #F4F1BB; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #4B4A67; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: #F4F1BB; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #4B4A67  ;
+  --nav-link-color: #4B4A67;
+  --nav-background-color: #F4F1BB;
+  --nav-hover-link-color: #F4F1BB;
+  --nav-hover-background-color: #4B4A67;
 }
 
 
